err/closure-linter.err
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/closure_linter'...
Listing './lib/python3.5/site-packages/closure_linter/common'...
Compiling './lib/python3.5/site-packages/closure_linter/common/htmlutil.py'...
***   File "./lib/python3.5/site-packages/closure_linter/common/htmlutil.py", line 149
    except HTMLParser.HTMLParseError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/common/simplefileflags.py'...
***   File "./lib/python3.5/site-packages/closure_linter/common/simplefileflags.py", line 171
    print 'Skipping %d file(s).' % skipped
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/ecmalintrules.py'...
***   File "./lib/python3.5/site-packages/closure_linter/ecmalintrules.py", line 800
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/error_fixer.py'...
***   File "./lib/python3.5/site-packages/closure_linter/error_fixer.py", line 489
    print 'Fixed %d errors in %s' % (self._file_fix_count, self._file_name)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/gjslint.py'...
***   File "./lib/python3.5/site-packages/closure_linter/gjslint.py", line 168
    print '%s: %d' % (path, len(path_errors))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/indentation.py'...
***   File "./lib/python3.5/site-packages/closure_linter/indentation.py", line 200
    print 'Line #%d: stack %r' % (token.line_number, stack)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/closure_linter/runner.py'...
***   File "./lib/python3.5/site-packages/closure_linter/runner.py", line 161
    except ecmametadatapass.ParseError, parse_err:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/closure_linter-2.3.13.egg-info'...
Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
